--- a/abstract.tex
+++ b/abstract.tex
@@ -1,17 +1,5 @@
-% TODO: Write a concise abstract summarizing your project (typically 200-300 words)
-%
-% Your abstract should include:
-% - Brief background on mTBI and the need for objective assessment tools
-% - The objective of this project
-% - A brief description of your approach (smartphone-based pupillometry device)
-% - Key biomarkers measured (PLR, convergence, smooth pursuit, microsaccades)
-% - Main results and findings
-% - Conclusions and significance
-%
-% Example structure:
-%
-% Mild traumatic brain injury (mTBI), commonly known as concussion, is a significant
-% public health concern requiring rapid and objective assessment methods. Current
-% diagnostic approaches rely heavily on subjective symptom evaluation. This project
-% presents the design and development of a smartphone-based mTBI screening tool
-% using pupillometry...
+Concussion assessment in grassroots sports faces a critical challenge: parents, coaches, and teachers witnessing head injuries lack access to objective screening tools that could guide medical referral decisions. Existing approaches either demand clinical expertise or rely on subjective symptom reporting, which athletes frequently minimise to remain in play. Commercial quantitative devices exist but require specialised equipment costing thousands of pounds.
+
+This project presents a smartphone-based screening system that measures three oculomotor biomarkers indicative of \ab{mtbi}: pupillary light reflex, smooth pursuit tracking, and vergence responses. The approach exploits the high prevalence of oculomotor dysfunction following concussion and the fact that these physiological responses are involuntary and cannot be suppressed by patient effort. Using only a consumer smartphone camera, the system delivers automated visual stimuli whilst tracking eye movements and pupil dynamics in real time.
+
+The resulting tool requires no medical training to operate, completes assessment in under ten minutes, and produces quantitative metrics for clinical referral decisions. By transforming complex neurophysiological measurements into an accessible screening modality, this work addresses the gap between rudimentary observational checklists and laboratory-grade diagnostic equipment, enabling non-medical first responders to make evidence-based decisions about seeking medical evaluation following suspected head injury.
