--- a/chap_commercialisation.tex
+++ b/chap_commercialisation.tex
@@ -7,7 +7,7 @@
 
 \section{Market Opportunity and Landscape}
 
-% TODO: Analyze the market size and opportunity
+% TODO: Analyse the market size and opportunity
 % - Global incidence of mTBI (sports, military, general population)
 % - Current market size for mTBI assessment tools
 % - Market growth projections
@@ -59,7 +59,7 @@
 
 \section{Go-to-Market Strategy}
 
-% TODO: Describe commercialization roadmap
+% TODO: Describe commercialisation roadmap
 % - Phase 1: Clinical validation and regulatory approval
 % - Phase 2: Pilot deployments (target sports teams/organizations)
 % - Phase 3: Commercial launch and scaling
