--- a/chap_conclusion.tex
+++ b/chap_conclusion.tex
@@ -2,12 +2,12 @@
 \label{chapter:conclusion}
 
 
-% TODO: Summarize the project and discuss future directions
+% TODO: Summarise the project and discuss future directions
 
 
 \section{Summary}
 
-% TODO: Summarize the entire project
+% TODO: Summarise the entire project
 % - Restate the objectives
 % - Summary of design approach
 % - Key achievements
