--- a/chap_implementation.tex
+++ b/chap_implementation.tex
@@ -90,4 +90,4 @@
 % TODO: Describe how components were integrated
 % - Hardware-software integration
 % - System debugging
-% - Performance optimization
+% - Performance optimisation
