--- a/glossary.tex
+++ b/glossary.tex
@@ -5,51 +5,43 @@
 % Use \ab{label} in the text to reference them.
 % On first use, the full form will be shown; subsequent uses show the abbreviation only.
 %
+% NOTE: Only add terms here when they are actually used with \ab{} in the text.
+% Terms not used will not appear in the glossary list.
+%
 
 
 % Medical and Clinical Terms
 
 \newabbreviation[description={Mild Traumatic Brain Injury, the medical term for concussion}]{mtbi}{mTBI}{mild traumatic brain injury}
 
-\newabbreviation[description={Traumatic Brain Injury}]{tbi}{TBI}{traumatic brain injury}
+\newabbreviation[description={Glasgow Coma Scale, clinical scale for assessing level of consciousness}]{gcs}{GCS}{Glasgow Coma Scale}
 
-\newabbreviation[description={Sport Concussion Assessment Tool - 5th Edition, a standardized concussion evaluation tool}]{scat5}{SCAT5}{Sport Concussion Assessment Tool - 5th Edition}
-
-\newabbreviation[description={Glasgow Coma Scale, a clinical scale to measure consciousness}]{gcs}{GCS}{Glasgow Coma Scale}
+\newabbreviation[description={Diffuse Axonal Injury, widespread microscopic damage to nerve fibres in the brain}]{dai}{DAI}{diffuse axonal injury}
 
 
-% Pupillometry and Oculomotor Terms
+% Clinical Assessment Tools
+
+\newabbreviation[description={Sport Concussion Assessment Tool, 5th Edition}]{scat5}{SCAT5}{Sport Concussion Assessment Tool, 5th Edition}
+
+\newabbreviation[description={Sport Concussion Assessment Tool, 6th Edition}]{scat6}{SCAT6}{Sport Concussion Assessment Tool, 6th Edition}
+
+\newabbreviation[description={Standardised Assessment of Concussion, cognitive component of SCAT}]{sac}{SAC}{Standardised Assessment of Concussion}
+
+\newabbreviation[description={Balance Error Scoring System, balance component of SCAT}]{bess}{BESS}{Balance Error Scoring System}
+
+
+% Oculomotor and Pupillometry Terms
 
 \newabbreviation[description={Pupillary Light Reflex, the pupil's response to changes in light intensity}]{plr}{PLR}{pupillary light reflex}
 
-\newabbreviation[description={The measurement and analysis of pupil size and responses}]{pupillometry}{pupillometry}{pupillometry}
-
-\newabbreviation[description={Eye movements towards each other when focusing on a near object}]{convergence}{convergence}{convergence}
-
-\newabbreviation[description={Smooth eye movements used to track moving objects}]{smoothpursuit}{smooth pursuit}{smooth pursuit}
-
-\newabbreviation[description={Small, rapid, involuntary eye movements}]{microsaccades}{microsaccades}{microsaccades}
-
-\newabbreviation[description={Vestibulo-Ocular Reflex, eye movements that stabilize images during head movement}]{vor}{VOR}{vestibulo-ocular reflex}
+\newabbreviation[description={Near Point of Convergence, minimum distance at which eyes can maintain binocular single vision}]{npc}{NPC}{near point of convergence}
 
 
-% Technology and Engineering Terms
+% Diagnostic Metrics
 
-\newabbreviation[description={Printed Circuit Board}]{pcb}{PCB}{printed circuit board}
-
-\newabbreviation[description={Light Emitting Diode}]{led}{LED}{light emitting diode}
-
-\newabbreviation[description={Application Programming Interface}]{api}{API}{application programming interface}
-
-\newabbreviation[description={Universal Serial Bus}]{usb}{USB}{Universal Serial Bus}
-
-\newabbreviation[description={Bluetooth Low Energy, a wireless communication protocol}]{ble}{BLE}{Bluetooth Low Energy}
-
-\newabbreviation[description={Frames Per Second, measure of video frame rate}]{fps}{FPS}{frames per second}
-
-\newabbreviation[description={Computer-Aided Design}]{cad}{CAD}{computer-aided design}
+\newabbreviation[description={Area Under the Curve, metric for diagnostic test performance from ROC analysis}]{auc}{AUC}{area under the curve}
 
 
-% Add more project-specific abbreviations as needed
+% Add additional terms below as they are used in the text with \ab{}
 % Example template:
 % \newabbreviation[description={Full description of term}]{label}{ABBREV}{full form}
