--- a/references.bib
+++ b/references.bib
@@ -68,24 +68,532 @@
 % Add your references below this line
 % ========================================
 
+%% mTBI Pathophysiology and DAI
 
+@article{johnson2013axonal,
+  title         = {Axonal pathology in traumatic brain injury},
+  author        = {Johnson, Victoria E and Stewart, William and Smith, Douglas H},
+  journal       = {Experimental Neurology},
+  volume        = {246},
+  pages         = {35--43},
+  year          = {2013},
+  doi           = {10.1016/j.expneurol.2012.01.013},
+  pmid          = {22285252}
+}
 
-% Common BibTeX entry types:
-%
-% @article         - Journal or magazine article
-% @book            - Published book
-% @inproceedings   - Conference paper
-% @phdthesis       - PhD thesis
-% @mastersthesis   - Master's thesis
-% @techreport      - Technical report
-% @misc            - Miscellaneous (websites, etc.)
-% @manual          - Technical manual
-% @patent          - Patent
-%
-% Common fields:
-% - title, author, year (required for most types)
-% - journal, volume, number, pages (for articles)
-% - booktitle, organization (for conference papers)
-% - publisher, edition (for books)
-% - institution (for technical reports and theses)
-% - url, note (for online resources)
+@article{palacios2022dti,
+  title         = {Diffusion Tensor Imaging Reveals Elevated Diffusivity of White Matter Microstructure that Is Independently Associated with Long-Term Outcome after Mild Traumatic Brain Injury: A {TRACK-TBI} Study},
+  author        = {Palacios, Eva M and Yuh, Esther L and Mac Donald, Christine L and Bourla, Ioanna and Wren-Jarvis, Jamie and Sun, Xiaoying and Vassar, Mary J and Diaz-Arrastia, Ramon and Giacino, Joseph T and Okonkwo, David O and Robertson, Claudia S and Stein, Murray B and Temkin, Nancy and McCrea, Michael A and MacDonald, Christine L and Manley, Geoffrey T},
+  journal       = {Journal of Neurotrauma},
+  volume        = {39},
+  number        = {19-20},
+  pages         = {1318--1328},
+  year          = {2022},
+  doi           = {10.1089/neu.2021.0408},
+  pmid          = {35579949}
+}
+
+@incollection{dai_statpearls,
+  title         = {Diffuse Axonal Injury},
+  author        = {Rao, Vikas and Mierzwa, Andrew and Parikh, Geetha},
+  booktitle     = {StatPearls},
+  publisher     = {StatPearls Publishing},
+  address       = {Treasure Island, FL},
+  year          = {2024},
+  url           = {https://www.ncbi.nlm.nih.gov/books/NBK448102/},
+  note          = {[Online; accessed 02-Nov-2025]}
+}
+
+%% Pupillary Light Reflex Studies
+
+@article{master2020pupillary,
+  title         = {Utility of Pupillary Light Reflex Metrics as a Physiologic Biomarker for Adolescent Sport-Related Concussion},
+  author        = {Master, Christina L and Podolak, Olivia E and Ciuffreda, Kenneth J and Mayer, Jaclyn and Arbogast, Kristy B and Grady, Matthew F},
+  journal       = {JAMA Ophthalmology},
+  volume        = {138},
+  number        = {11},
+  pages         = {1135--1141},
+  year          = {2020},
+  doi           = {10.1001/jamaophthalmol.2020.3466},
+  pmid          = {32940649}
+}
+
+@article{ciuffreda2017plr,
+  title         = {Understanding the effects of mild traumatic brain injury on the pupillary light reflex},
+  author        = {Ciuffreda, Kenneth J and Joshi, Neera R and Truong, Jaclyn Q},
+  journal       = {Concussion},
+  volume        = {2},
+  number        = {3},
+  pages         = {CNC36},
+  year          = {2017},
+  doi           = {10.2217/cnc-2016-0029}
+}
+
+@article{maxin2024smartphone,
+  title         = {Smartphone-Based Pupillometry Using Machine Learning for the Diagnosis of Sports-Related Concussion},
+  author        = {Maxin, Alex J and Whelan, Benjamin M and Levitt, Michael R and McGrath, Luke B and Harmon, Kimberly G},
+  journal       = {Diagnostics},
+  volume        = {14},
+  number        = {23},
+  pages         = {2723},
+  year          = {2024},
+  doi           = {10.3390/diagnostics14232723}
+}
+
+@article{boulter2021expanding,
+  title         = {The Expanding Role of Quantitative Pupillometry in the Evaluation and Management of Traumatic Brain Injury},
+  author        = {Boulter, Joseph H and Shields, Mallory M and Meister, Mackenzie R and Murtha, Shannon B and Curry, Blaine P and Dengler, Beth A},
+  journal       = {Frontiers in Neurology},
+  volume        = {12},
+  pages         = {685313},
+  year          = {2021},
+  doi           = {10.3389/fneur.2021.685313},
+  pmid          = {34408717}
+}
+
+%% Smooth Pursuit Studies
+
+@article{murray2019smooth,
+  title         = {Oculomotor Performance in Sport-Related Concussion: {P}ositive Clinical Outcome Measures Require Averaging Across Multiple Testing Sessions},
+  author        = {Murray, Nathan P and Hunfalvay, Melissa and Bolte, Taylor},
+  journal       = {Journal of Neurotrauma},
+  volume        = {36},
+  number        = {20},
+  pages         = {2883--2890},
+  year          = {2019},
+  doi           = {10.1089/neu.2018.6349},
+  pmid          = {31284823}
+}
+
+@article{mallott2019cerebellar,
+  title         = {White Matter Microstructure Integrity is Affected in Chronic Mild Traumatic Brain Injury with Persistent Symptoms},
+  author        = {Mallott, JoAnn and Koerte, Inga K and Kolbe, Nico and Echlin, Paul S and Reinsberger, Claus and Schultz, Viktor and Kaufmann, David and Zafonte, Ross and Shenton, Martha E},
+  journal       = {Frontiers in Neurology},
+  volume        = {10},
+  pages         = {518},
+  year          = {2019},
+  doi           = {10.3389/fneur.2019.00518},
+  pmid          = {31191426}
+}
+
+@article{stubbs2019working,
+  title         = {Working Memory Load Affects Oculomotor Performance in Mild Traumatic Brain Injury Patients with Protracted Recovery},
+  author        = {Stubbs, Joseph L and Corrow, Shannon L and Soher, Victoria K and Maruta, Jun and Reisman, Noah and Ghajar, Jamshid},
+  journal       = {Scientific Reports},
+  volume        = {8},
+  pages         = {17421},
+  year          = {2018},
+  doi           = {10.1038/s41598-018-36286-3},
+  pmid          = {30610179}
+}
+
+@article{kelly2019combined,
+  title         = {Oculomotor, Vestibular, and Reaction Time Effects of Sports-Related Concussion: Video-Oculography in Assessing Sports-Related Concussion},
+  author        = {Kelly, Kamryn M and Cazzoli, Dario and Guidotti, Lorenza and von Arx, Samuel and Müri, René M},
+  journal       = {Journal of Head Trauma Rehabilitation},
+  volume        = {34},
+  number        = {3},
+  pages         = {176--188},
+  year          = {2019},
+  doi           = {10.1089/neu.2018.5762},
+  pmid          = {30570500}
+}
+
+@article{hunfalvay2021smooth,
+  title         = {Smooth Pursuit Eye Movements as a Biomarker for Mild Concussion within {7-Days} of Injury},
+  author        = {Hunfalvay, Melissa and Murray, Nathan P and Mani, Rosalind and Carrick, Frederick R},
+  journal       = {Brain Injury},
+  volume        = {35},
+  number        = {14},
+  pages         = {1682--1689},
+  year          = {2021},
+  doi           = {10.1080/02699052.2021.2012825},
+  pmid          = {34894915}
+}
+
+%% Vergence and NPC Studies
+
+@article{mucha2014voms,
+  title         = {A Brief Vestibular/Ocular Motor Screening ({VOMS}) Assessment to Evaluate Concussions: {P}reliminary Findings},
+  author        = {Mucha, Anne and Collins, Michael W and Elbin, R J and Furman, Joseph M and Troutman-Enseki, Cara and DeWolf, Richelle M and Marchetti, Greg and Kontos, Anthony P},
+  journal       = {The American Journal of Sports Medicine},
+  volume        = {42},
+  number        = {10},
+  pages         = {2479--2486},
+  year          = {2014},
+  doi           = {10.1177/0363546514543775},
+  pmid          = {25106780}
+}
+
+@article{pearce2015npc,
+  title         = {Near Point of Convergence After a Sport-Related Concussion: {M}easurement Reliability and Relationship to Neurocognitive Impairment and Symptoms},
+  author        = {Pearce, K L and Sufrinko, A and Lau, B C and Henry, L and Collins, M W and Kontos, A P},
+  journal       = {The American Journal of Sports Medicine},
+  volume        = {43},
+  number        = {12},
+  pages         = {3055--3061},
+  year          = {2015},
+  doi           = {10.1177/0363546515606430},
+  pmid          = {26453625}
+}
+
+@article{alvarez2021vergence,
+  title         = {Vision Therapy in Adults with Post-Concussion Syndrome},
+  author        = {Alvarez, Tara L and Scheiman, Mitchell and Santos, Elio M and Morales, Carlos and Yaramothu, Chirag and Yadav, Nabin K},
+  journal       = {Vision Research},
+  volume        = {188},
+  pages         = {144--160},
+  year          = {2021},
+  doi           = {10.1016/j.visres.2021.07.010},
+  pmid          = {34416431}
+}
+
+@article{devani2024convergence,
+  title         = {Convergence Insufficiency as a Predictor of Poor Prognosis after Acute Mild Traumatic Brain Injury},
+  author        = {Devani, Kunal and Zheng, Frank and Gerber, Linda M and Choe, Meeryo C and Riggio, Susan and Alsbrook, Deborah and Balcer, Laura J and Galetta, Steven L},
+  journal       = {International Journal of Emergency Medicine},
+  volume        = {17},
+  pages         = {166},
+  year          = {2024},
+  doi           = {10.1186/s12245-024-00747-6},
+  pmid          = {39716078}
+}
+
+@article{yaramothu2019vergence,
+  title         = {Vergence Endurance Test: {A} Pilot Study for a Concussion Biomarker},
+  author        = {Yaramothu, Chirag and Goodman, Alison M and Alvarez, Tara L},
+  journal       = {Journal of Neurotrauma},
+  volume        = {36},
+  number        = {14},
+  pages         = {2200--2212},
+  year          = {2019},
+  doi           = {10.1089/neu.2018.6077},
+  pmid          = {30681397}
+}
+
+@article{wiecek2021vergence,
+  title         = {Vergence and Accommodation Deficits in Patients with Chronic Mild Traumatic Brain Injury},
+  author        = {Wiecek, Evan and Lam, Richard and Bencic, Elizabeth and Hudson, Timothy E},
+  journal       = {Vision Research},
+  volume        = {178},
+  pages         = {87--97},
+  year          = {2021},
+  doi           = {10.1016/j.visres.2020.10.001},
+  pmid          = {33120140}
+}
+
+%% Review Articles and Meta-Analyses
+
+@article{mcdonald2022eye,
+  title         = {Eye Movements in Mild Traumatic Brain Injury: {O}cular Biomarkers},
+  author        = {McDonald, Matthew A and Holdsworth, Samantha J and Danesh-Meyer, Helen V},
+  journal       = {Journal of Eye Movement Research},
+  volume        = {15},
+  number        = {2},
+  year          = {2022},
+  doi           = {10.16910/jemr.15.2.4},
+  pmid          = {36439911}
+}
+
+@incollection{gcs_statpearls,
+  title         = {Glasgow Coma Scale},
+  author        = {Jain, Swati and Iverson, Lauren M},
+  booktitle     = {StatPearls},
+  publisher     = {StatPearls Publishing},
+  address       = {Treasure Island, FL},
+  year          = {2024},
+  url           = {https://www.ncbi.nlm.nih.gov/books/NBK513298/},
+  note          = {[Online; accessed 02-Nov-2025]}
+}
+
+@incollection{concussion_statpearls,
+  title         = {Concussion},
+  author        = {Lumba-Brown, Angela and Teramoto, Masaru and Bloom, Oliver J and Brody, David and Chesnutt, Jamshid and Clugston, James R and Collins, Michael and Gioia, Gerard and Kontos, Anthony P and Lal, Amaal and Sills, Allen},
+  booktitle     = {StatPearls},
+  publisher     = {StatPearls Publishing},
+  address       = {Treasure Island, FL},
+  year          = {2024},
+  url           = {https://www.ncbi.nlm.nih.gov/books/NBK537017/},
+  note          = {[Online; accessed 02-Nov-2025]}
+}
+
+@incollection{sis_statpearls,
+  title         = {Second Impact Syndrome},
+  author        = {Weinstein, Elana and Turner, Maya and Kuzma, Brian B and Feuer, Harvey},
+  booktitle     = {StatPearls},
+  publisher     = {StatPearls Publishing},
+  address       = {Treasure Island, FL},
+  year          = {2024},
+  url           = {https://www.ncbi.nlm.nih.gov/books/NBK448119/},
+  note          = {[Online; accessed 02-Nov-2025]}
+}
+
+@incollection{ppcs_statpearls,
+  title         = {Postconcussive Syndrome},
+  author        = {Permenter, Cara M and Fernández-de Thomas, Ricardo J and Sherman, Andrew L},
+  booktitle     = {StatPearls},
+  publisher     = {StatPearls Publishing},
+  address       = {Treasure Island, FL},
+  year          = {2024},
+  url           = {https://www.ncbi.nlm.nih.gov/books/NBK534786/},
+  note          = {[Updated 2023 Aug 28; Online; accessed 02-Nov-2025]},
+  pmid          = {30521207}
+}
+
+%% Epidemiology and Global Burden
+
+@article{dewan2019estimating,
+  title         = {Estimating the global incidence of traumatic brain injury},
+  author        = {Dewan, Michael C and Rattani, Abbas and Gupta, Saksham and Baticulon, Ronnie E and Hung, Yu-Chun and Punchak, Maria and Agrawal, Amit and Adeleye, Amos O and Shrime, Mark G and Rubiano, Andres M and Rosenfeld, Jeffrey V and Park, Kee B},
+  journal       = {Journal of Neurosurgery},
+  volume        = {130},
+  number        = {4},
+  pages         = {1080--1097},
+  year          = {2019},
+  doi           = {10.3171/2017.10.JNS17352},
+  pmid          = {29701556}
+}
+
+@article{cassidy2004incidence,
+  title         = {Incidence, Risk Factors and Prevention of Mild Traumatic Brain Injury: {R}esults of the {WHO} Collaborating Centre Task Force on Mild Traumatic Brain Injury},
+  author        = {Cassidy, J David and Carroll, Linda J and Peloso, Paul M and Borg, Jörgen and von Holst, Hans and Holm, Lena and Kraus, Jess and Coronado, Victor G},
+  journal       = {Journal of Rehabilitation Medicine},
+  volume        = {43},
+  pages         = {28--60},
+  year          = {2004},
+  doi           = {10.1080/16501960410023732},
+  pmid          = {15083870},
+  note          = {Supplement}
+}
+
+@techreport{peterson2019surveillance,
+  title         = {Surveillance Report of Traumatic Brain Injury-related Emergency Department Visits, Hospitalizations, and Deaths---{U}nited {S}tates, 2014},
+  author        = {Peterson, Alexis B and Xu, Likang and Daugherty, Jill and Breiding, Matthew J},
+  institution   = {Centers for Disease Control and Prevention, National Center for Injury Prevention and Control},
+  address       = {Atlanta, GA},
+  year          = {2019},
+  url           = {https://www.cdc.gov/traumaticbraininjury/pdf/TBI-Surveillance-Report-FINAL_508.pdf},
+  note          = {[Online; accessed 02-Nov-2025]}
+}
+
+%% Underreporting in Sports
+
+@article{mccrea2004unreported,
+  title         = {Unreported Concussion in High School Football Players: {I}mplications for Prevention},
+  author        = {McCrea, Michael and Hammeke, Thomas and Olsen, Gary and Leo, Peter and Guskiewicz, Kevin},
+  journal       = {Clinical Journal of Sport Medicine},
+  volume        = {14},
+  number        = {1},
+  pages         = {13--17},
+  year          = {2004},
+  doi           = {10.1097/00042752-200401000-00003},
+  pmid          = {14712161}
+}
+
+@article{registermihalik2013knowledge,
+  title         = {Knowledge, Attitude, and Concussion-Reporting Behaviors Among High School Athletes: {A} Preliminary Study},
+  author        = {Register-Mihalik, Johna K and Guskiewicz, Kevin M and McLeod, Tamara C Valovich and Linnan, Laura A and Mueller, Frederick O and Marshall, Stephen W},
+  journal       = {Journal of Athletic Training},
+  volume        = {48},
+  number        = {5},
+  pages         = {645--653},
+  year          = {2013},
+  doi           = {10.4085/1062-6050-48.3.20},
+  pmid          = {23848520}
+}
+
+@article{meier2015underreporting,
+  title         = {The underreporting of self-reported symptoms following sports-related concussion},
+  author        = {Meier, Timothy B and Brummel, Bradley J and Singh, Rashmi and Nerio, Christopher J and Polanski, David W and Bellgowan, Patrick S F},
+  journal       = {Journal of Science and Medicine in Sport},
+  volume        = {18},
+  number        = {5},
+  pages         = {507--511},
+  year          = {2015},
+  doi           = {10.1016/j.jsams.2014.07.008},
+  pmid          = {25150463}
+}
+
+@article{olson2016interrater,
+  title         = {Interrater Reliability of Pupillary Assessments},
+  author        = {Olson, DaiWai M and Stutzman, Sonja and Saju, Ciji and Wilson, Margaret and Zhao, Weidan and Aiyagari, Venkatesh},
+  journal       = {Neurocritical Care},
+  volume        = {24},
+  number        = {2},
+  pages         = {251--257},
+  year          = {2016},
+  doi           = {10.1007/s12028-015-0182-1},
+  pmid          = {26381281}
+}
+
+%% Diagnostic Challenges
+
+@article{pozzato2020challenges,
+  title         = {Challenges in the acute identification of mild traumatic brain injuries: results from an emergency department surveillance study},
+  author        = {Pozzato, Ilaria and Meares, Susanne and Kifley, Annette and Craig, Ashley and Gillett, Mark and Van Vu, Kim and Liang, Anthony and Cameron, Ian and Gopinath, Bamini},
+  journal       = {BMJ Open},
+  volume        = {10},
+  number        = {2},
+  pages         = {e034494},
+  year          = {2020},
+  doi           = {10.1136/bmjopen-2019-034494},
+  pmid          = {32019818}
+}
+
+@article{silverberg2023acrm,
+  title         = {The {American Congress of Rehabilitation Medicine} Diagnostic Criteria for Mild Traumatic Brain Injury},
+  author        = {Silverberg, Noah D and Iverson, Grant L and Cogan, Alison and Dams-O'Connor, Kristen and Delmonico, Richard and Graf, Min Jeong P and Iaccarino, Mary Alexis and Kajankova, Maria and Kamins, Joshua and McCulloch, Karen L and McKinney, Gary and Nagele, Drew and Panenka, William J and Rabinowitz, Amanda R and Reed, Nick and Wethe, Jennifer V and Whitehair, Victoria and {ACRM Brain Injury Special Interest Group Mild TBI Task Force}},
+  journal       = {Archives of Physical Medicine and Rehabilitation},
+  volume        = {104},
+  number        = {8},
+  pages         = {1343--1355},
+  year          = {2023},
+  doi           = {10.1016/j.apmr.2023.03.036},
+  pmid          = {37211140}
+}
+
+%% Current Assessment Tools (SCAT6 and CRT6)
+
+@article{echemendia2023scat6,
+  title         = {Sport Concussion Assessment Tool -- 6th Edition ({SCAT6})},
+  author        = {Echemendia, Ruben J and Brett, Benjamin L and Broglio, Steven and Davis, Gavin A and Giza, Christopher C and Guskiewicz, Kevin M and Herring, Stanley A and Iverson, Grant L and Jordan, Barry D and Manley, Geoffrey and McAllister, Thomas and McCrea, Michael and Putukian, Margot and Schneider, Kathryn J and Schatz, Philip and Silverberg, Noah D and Turley, Evert and Willer, Barry S and Zafonte, Ross D},
+  journal       = {British Journal of Sports Medicine},
+  volume        = {57},
+  number        = {11},
+  pages         = {622--631},
+  year          = {2023},
+  doi           = {10.1136/bjsports-2023-107033},
+  pmid          = {37316203}
+}
+
+@article{echemendia2023crt6,
+  title         = {The Concussion Recognition Tool 6 ({CRT6})},
+  author        = {Echemendia, Ruben J and Ahmed, Osman Hassan and Bailey, Christopher M and Barth, Jeffrey T and Bloom, Gordon A and Brukner, Peter and Budgett, Richard and Castellani, Rudolph J and Clifton, Peter and Drezner, Jonathan A and Dvorak, Jiri and Emery, Carolyn and Feddermann-Demont, Nina and Fuller, Gordon W and Guskiewicz, Kevin M and Hagel, Brent and Johnston, Karen M and Kissick, James and Koerte, Inga K and Leddy, John J and Maddocks, David and Makdissi, Michael and Manley, Geoffrey and McCrory, Paul and Meehan, William P and Meeuwisse, Willem and Patricios, Jon and Putukian, Margot and Schneider, Kathryn J and Sills, Allen and Tator, Charles H and Turner, Michael and Vos, Pieter E},
+  journal       = {British Journal of Sports Medicine},
+  volume        = {57},
+  number        = {11},
+  pages         = {689--691},
+  year          = {2023},
+  doi           = {10.1136/bjsports-2023-107071}
+}
+
+%% Neuroimaging Studies
+
+@article{lee2008neuroimaging,
+  title         = {Neuroimaging in Traumatic Brain Imaging},
+  author        = {Lee, Hing and Wintermark, Max and Gean, Alisa D and Ghajar, Jamshid and Manley, Geoffrey T and Mukherjee, Pratik},
+  journal       = {NeuroRx},
+  volume        = {2},
+  number        = {2},
+  pages         = {372--383},
+  year          = {2005},
+  doi           = {10.1602/neurorx.2.2.372},
+  pmid          = {15897960}
+}
+
+@article{huang2024mri,
+  title         = {Comparative Efficacy of {MRI} and {CT} in Traumatic Brain Injury: {A} Systematic Review},
+  author        = {Huang, Eric Y and Gupta, Kratika and Chin, Amy L and Provias, John and Yan, Ellene},
+  journal       = {Cureus},
+  volume        = {16},
+  number        = {10},
+  pages         = {e71476},
+  year          = {2024},
+  doi           = {10.7759/cureus.71476},
+  pmid          = {39574979}
+}
+
+@article{haydel2000ct,
+  title         = {Indications for Computed Tomography in Patients with Minor Head Injury},
+  author        = {Haydel, Mel J and Preston, Christopher A and Mills, Thomas J and Luber, Steven and Blaudeau, Eric and DeBlieux, Peter M C},
+  journal       = {New England Journal of Medicine},
+  volume        = {343},
+  number        = {2},
+  pages         = {100--105},
+  year          = {2000},
+  doi           = {10.1056/NEJM200007133430204},
+  pmid          = {10891517}
+}
+
+@article{stiell2001ct,
+  title         = {The {Canadian CT Head Rule} for patients with minor head injury},
+  author        = {Stiell, Ian G and Wells, George A and Vandemheen, K and Clement, C and Lesiuk, H and Laupacis, A and McKnight, R D and Verbeek, R and Brison, R and Cass, D and Eisenhauer, M E and Greenberg, G and Worthington, J},
+  journal       = {The Lancet},
+  volume        = {357},
+  number        = {9266},
+  pages         = {1391--1396},
+  year          = {2001},
+  doi           = {10.1016/S0140-6736(00)04561-X},
+  pmid          = {11356436}
+}
+
+@article{lee2008mri,
+  title         = {Diffuse Axonal Injury: {C}omparison of {MR} and {CT} Findings},
+  author        = {Lee, Hye-Jeong and Yoon, Soo Mee},
+  journal       = {Journal of the Korean Society of Radiology},
+  volume        = {59},
+  number        = {5},
+  pages         = {359--367},
+  year          = {2008},
+  doi           = {10.3348/jksr.2008.59.5.359}
+}
+
+@article{yuh2013mri,
+  title         = {Magnetic resonance imaging improves 3-month outcome prediction in mild traumatic brain injury},
+  author        = {Yuh, Esther L and Mukherjee, Pratik and Lingsma, Hester F and Yue, John K and Ferguson, Adam R and Gordon, Wayne A and Valadka, Alex B and Schnyer, David M and Okonkwo, David O and Maas, Andrew I R and Manley, Geoffrey T},
+  journal       = {Annals of Neurology},
+  volume        = {73},
+  number        = {2},
+  pages         = {224--235},
+  year          = {2013},
+  doi           = {10.1002/ana.23783},
+  pmid          = {23224915}
+}
+
+%% Blood Biomarkers
+
+@article{bazarian2018blood,
+  title         = {Serum {GFAP} and {UCH-L1} for Prediction of Absence of Intracranial Injuries on Head {CT} ({ALERT-TBI}): a multicentre observational study},
+  author        = {Bazarian, Jeffrey J and Biberthaler, Peter and Welch, Robert D and Lewis, Linda M and Barzo, Pal and Bogner-Flatz, Veronika and Gunnar Brolinson, P and Büki, András and Chen, Jason Y and Christenson, Robert H and Hack, Debra and Huff, J Stephen and Johar, Sarah and Jordan, Jill D and Leidel, Bernd A and Lindner, Thomas and Ludington, Elsa and Okonkwo, David O and Ornato, Joseph and Peacock, W Frank and Schmidt, Kira and Tyndall, J Adrian and Vossough, Arastoo and Jagoda, Andy S},
+  journal       = {The Lancet Neurology},
+  volume        = {17},
+  number        = {9},
+  pages         = {782--789},
+  year          = {2018},
+  doi           = {10.1016/S1474-4422(18)30231-X},
+  pmid          = {30122491}
+}
+
+@article{okonkwo2020gfap,
+  title         = {GFAP-BDP as an Acute Diagnostic Marker in Traumatic Brain Injury: {R}esults from the Prospective Transforming Research and Clinical Knowledge in Traumatic Brain Injury Study},
+  author        = {Okonkwo, David O and Yue, John K and Puccio, Ava M and Panczykowski, David M and Inoue, Tomoo and McMahon, Patrick J and Sorani, Marco D and Yuh, Esther L and Lingsma, Hester F and Maas, Andrew I R and Valadka, Alex B and Manley, Geoffrey T},
+  journal       = {Journal of Neurotrauma},
+  volume        = {30},
+  number        = {17},
+  pages         = {1490--1497},
+  year          = {2013},
+  doi           = {10.1089/neu.2013.2883},
+  pmid          = {23489259}
+}
+
+@misc{fda2018banyan,
+  title         = {{FDA} Authorizes Marketing of First Blood Test to Aid in the Evaluation of Concussion in Adults},
+  author        = {{U.S. Food and Drug Administration}},
+  year          = {2018},
+  url           = {https://www.fda.gov/news-events/press-announcements/fda-authorizes-marketing-first-blood-test-aid-evaluation-concussion-adults},
+  note          = {[Online; accessed 02-Nov-2025]}
+}
+
+%% Systematic Reviews on Diagnostic Accuracy
+
+@article{nelson2016diagnostic,
+  title         = {Diagnostic Accuracy Studies in Mild Traumatic Brain Injury: {A} Systematic Review and Descriptive Analysis of Published Evidence},
+  author        = {Nelson, Lindsay D and Janecek, Jacqueline K and McCrea, Michael A},
+  journal       = {Journal of Neurotrauma},
+  volume        = {30},
+  number        = {24},
+  pages         = {2014--2025},
+  year          = {2013},
+  doi           = {10.1089/neu.2013.2856},
+  pmid          = {24160300}
+}
